--- a/index.html
+++ b/index.html
@@ -2,63 +2,232 @@
 <html lang="pt-br">
 
 <head>
-  <title>Componentes</title>
+  <title>Music Site</title>
   <meta charset="UTF-8">
 
-  <!--  CSS  -->
+  <!--  CSS Bootstrap  -->
   <link href="public/css/bootstrap.min.css" rel="stylesheet">
 
+  <!--  Fontawesome  -->
+  <link href="css/all.css" rel="stylesheet">
+
+  <!--  CSS Personalizado -->
+  <link href="css/style.css" rel="stylesheet">
+
+  <!--  Favicon  -->
+  <link href="" rel="shortcut icon">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-danger navbar-light">
-    <a href="#" class="navbar-brand">LOGO</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <!--  Seção 1  -->
+  <header id="secao_1">
+    <nav class="navbar navbar-dark bg-transparent container pt-3">
+      <a href="#" class="navbar-brand">HOME</a>
+      <div class="mr-0">
+        <a href="#" class="text-light sombra">SAIBA MAIS</a>
+        <a href="#" class="text-light ml-3 sombra">COMPRAR</a>
+        <a href="#" class="text-light ml-3 sombra">CONTATO</a>
+      </div>
+    </nav>
 
-    <!--  LINKS  -->
-    <div id="menu" class="collapse navbar-collapse">
-      <ul class="navbar-nav ml-md-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
-        </li>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 text-light text-center" style="padding-top: 300px; text-shadow: 2px 2px 2px #111">
+          <h1>SUMMER</h1>
+          <h1 class="display-3" style="font-family: Impact">WEBSITE</h1>
+        </div>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Quem somos</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Serviços</a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="menu_dropdown" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">Sites</a>
-
-          <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">Site 1</a>
-            <a href="#" class="dropdown-item">Site 2</a>
-          </div>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#">Fale conosco</a>
-        </li>
-
-        <form class="form-inline">
-          <div class="input-group">
-            <input type="text" placeholder="Buscar" name="buscar" class="form-control input-group-prepend">
-            <input type="submit" class="btn btn-success">
-          </div>
-        </form>
-      </ul>
+        <div class="col-6 text-light text-right" style="padding-top: 200px">
+          <h1 class="display-4">SITE DE MÚSICA</h1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <button class="btn btn-light">Leia mais</button>
+        </div>
+      </div>
     </div>
-  </nav>
+  </header>
 
-  <footer>
-    <!--  JS  -->
-    <script src="public/js/jquery.js"></script>
-    <script src="public/js/bootstrap.bundle.min.js"></script>
+  <!--  Seção 2  -->
+  <section class="text-center text-light">
+    <div class="container">
+      <i class="fas fa-dot-circle display-4 mb-3"></i>
+      <h1 class="mb-3">Sobre o site</h1>
+      <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    </div>
+  </section>
+
+  <!--  Seção 3  -->
+  <section class="background_rosa text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <i class="fas fa-forward display-4 mb-3"></i>
+          <h4 class="mb-3">Nova música</h4>
+          <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="col-4">
+          <i class="fas fa-forward display-4 mb-3"></i>
+          <h4 class="mb-3">Novos grupos</h4>
+          <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="col-4">
+          <i class="fas fa-forward display-4 mb-3"></i>
+          <h4 class="mb-3">Novos temas</h4>
+          <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--  Seção 4  -->
+  <section class="text-light">
+    <div class="container">
+      <div class="text-center">
+        <h1 class="mb-3">Prioridades</h1>
+        <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      </div>
+
+      <div class="row">
+        <div class="col-4 background_rosa pt-5 pb-5 mt-5 pl-5 pr-5 borda">
+          <h1 class="mb-3">Título</h1>
+          <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <i class="far fa-circle display-4"></i>
+        </div>
+        <div class="col-4 background_rosa pt-5 pb-5 mt-5 pl-5 pr-5 borda">
+          <h1 class="mb-3">Título</h1>
+          <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <i class="far fa-circle display-4"></i>
+        </div>
+        <div class="col-4 background_rosa pt-5 pb-5 mt-5 pl-5 pr-5 borda">
+          <h1 class="mb-3">Título</h1>
+          <p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <i class="far fa-circle display-4"></i>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--  Seção 5  -->
+  <section id="secao_5" class="text-light">
+    <div class="container">
+      <div class="text-center">
+        <h1 class="mb-5">Alguns números</h1>
+      </div>
+
+      <div class="row">
+        <div class="col-4">
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <h4>2018</h4>
+          <h4>Lorem Ipsum</h4>
+        </div>
+        <div class="col-4">
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <h4>2019</h4>
+          <h4>Lorem Ipsum</h4>
+        </div>
+        <div class="col-4">
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <h4>2020</h4>
+          <h4>Lorem Ipsum</h4>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!--  Seção 6  -->
+  <section class="text-center text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h3 class="mt-5 mb-3">Projetos / agosto 2020</h3>
+          <h3 class="mb-3">Algo incrível vai acontecer</h3>
+          <p class="px-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div>
+        <div class="col-6">
+          <img src="public/img/2.png" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-6">
+          <img src="public/img/1.png" class="img-fluid">
+        </div>
+        <div class="col-6">
+          <h3 class="mt-5 mb-3">Projetos / agosto 2020</h3>
+          <h3 class="mb-3">Algo incrível vai acontecer</h3>
+          <p class="px-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-6">
+          <h3 class="mt-5 mb-3">Projetos / agosto 2020</h3>
+          <h3 class="mb-3">Algo incrível vai acontecer</h3>
+          <p class="px-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div>
+        <div class="col-6">
+          <img src="public/img/9.png" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--  Seção 7  -->
+  <section class="background_rosa text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-4" style="border-left: 10px white solid">
+          <h5>Lorem ipsum dolor sit amet</h5>
+          <h5>Lorem Ipsum is simply dummy</h5>
+        </div>
+        <div class="col-4" style="border-left: 10px white solid">
+          <h5>Lorem ipsum dolor sit amet</h5>
+          <h5>Lorem Ipsum is simply dummy</h5>
+        </div>
+        <div class="col-4" style="border-left: 10px white solid">
+          <h5>Lorem ipsum dolor sit amet</h5>
+          <h5>Lorem Ipsum is simply dummy</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--  Seção 8  -->
+  <section class="text-center text-light">
+    <div class="container">
+      <i class="fas fa-quote-left display-4 mb-3"></i>
+      <p class="lead mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <h3 class="mb-5">Alan</h3>
+      <div class="display-4">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+    </div>
+  </section>
+
+  <!--  Seção 9  -->
+  <footer class="background_rosa">
+    <div class="container">
+      <div class="row text-light">
+        <div class="col-6">
+          <h4 class="my-4">Sobre</h4>
+          <p class="my-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </div>
+        <div class="col-2">
+          <h4 class="my-4">Sobre</h4>
+          <p><a href="#" class="text-light">Time</a></p>
+          <p><a href="#" class="text-light">Junte-se a nós</a></p>
+          <p><a href="#" class="text-light">Meta</a></p>
+          <p><a href="#" class="text-light">Ética</a></p>
+        </div>
+        <div class="col-2"></div>
+        <div class="col-2"></div>
+      </div>
+
+      <div class="text-center mt-5">
+        <a class="text-dark text-center" style="font-size: 11px" href="https://br.freepik.com/fotos-vetores-gratis/bandeira">Bandeira psd criado por freepik - br.freepik.com</a>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
